package edu.fiuba.algo3.modelo;

public class SorpresaCambioVehiculo implements Sorpresa{

    public double serAbiertopor() {

    }
}
