package edu.fiuba.algo3.modelo;

public class SorpresaDesfavorable implements Sorpresa{

    public double serAbiertopor() {

    }
}
