package edu.fiuba.algo3.modelo;

public class SorpresaFavorable implements Sorpresa {
  @Override
  public double activar(Vehiculo vehiculo) {
    return 0.8;
  }
}
