@startuml
'https://plantuml.com/class-diagram

interface Penalizador {
    + {abstract} serAtravesadoPor(moto: Moto)
    + {abstract} serAtravesadoPor(auto: Auto)
    + {abstract} serAtravesadoPor(auto4x4: Auto4x4)
}

class Piquete {
    + serAtravesadoPor(moto: Moto)
    + serAtravesadoPor(auto: Auto)
    + serAtravesadoPor(auto4x4: Auto4x4)
}

class ControlPolicial {
    + serAtravesadoPor(moto: Moto)
    + serAtravesadoPor(auto: Auto)
    + serAtravesadoPor(auto4x4: Auto4x4)
}

class Pozo {
    + {abstract} serAtravesadoPor(moto: Moto)
    + {abstract} serAtravesadoPor(auto: Auto)
    + {abstract} serAtravesadoPor(auto4x4: Auto4x4)
}

interface Vehiculo {
    + {abstract} pasarPor(piquete: Piquete)
    + {abstract} pasarPor(pozo: Pozo)
    + {abstract} pasarPor(controlPolicial: ControlPolicial)
}

interface Bonificador{
    + {abstract} bonificar()
}

interface Cambiador{
    + {abstract} cambiar()
}

class SorpresaFavorable {
    + bonificar()
}
class SorpresaDesfavorable {
    + serAtravesadoPor(moto: Moto)
    + serAtravesadoPor(auto: Auto)
    + serAtravesadoPor(auto4x4: Auto4x4)
}
class SorpresaCambioVehiculo {}

Vehiculo ..> SorpresaFavorable
Vehiculo ..> SorpresaDesfavorable
Vehiculo ..> SorpresaCambioVehiculo

Penalizador <|.. Pozo
Penalizador <|.. ControlPolicial
Penalizador <|.. Piquete
Penalizador <|.. SorpresaDesfavorable
Penalizador ..> Vehiculo

Vehiculo ..> Pozo
Vehiculo ..> Piquete
Vehiculo ..> ControlPolicial

Cambiador <|.. SorpresaCambioVehiculo
Bonificador <|.. SorpresaFavorable

@enduml